# moveit_opw_kinematics_plugin

./: .gitignore  .gitmodules  .travis.rosinstall  .travis.yml  CHANGELOG.rst  CMakeLists.txt  ConfigExtras.cmake  README.md  documentation.rst  moveit_opw_kinematics_plugin_description.xml  opw_kinematics_plugin_description.xml  package.xml
.github/workflows/: ci_bionic.yml  ci_focal.yml
include/moveit_opw_kinematics_plugin/: moveit_opw_kinematics_plugin.h  moveit_opw_railed_kinematics_plugin.h
include/opw_kinematics_plugin/: opw_kinematics_plugin.h
moveit_opw_kinematics_plugin/: CMakeLists.txt  README.md
moveit_opw_kinematics_plugin/include/moveit_opw_kinematics_plugin/: moveit_opw_kinematics_plugin.h
moveit_opw_kinematics_plugin/src/: moveit_opw_kinematics_plugin.cpp
moveit_opw_kinematics_plugin/test/: test_fanuc.rostest  test_fanuc_faulty_params.rostest
src/: moveit_opw_kinematics_plugin.cpp  moveit_opw_railed_kinematics_plugin.cpp  opw_kinematics_plugin.cpp
test/: faulty_kinematics_fanuc.yaml  faulty_kinematics_kuka.yaml  kinematics.yaml  kinematics_fanuc.yaml  kinematics_kuka.yaml  kuka_kr6r700sixx.srdf  kuka_kr6r700sixx.urdf  load_kinematics_yaml.launch  test_fanuc.cpp  test_fanuc.rostest  test_faulty_params.cpp  test_kuka.cpp  test_kuka.rostest  test_kuka_faulty_params.rostest  test_kuka_specific.cpp  test_load_parameters.cpp  test_load_params.launch  test_model_from_file.cpp  test_plugin.cpp  test_utils.h  utest.cpp  utest.launch
