<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_opw</name>
  <version>2.5.4</version>
  <description>Package for opw inverse kinematics solvers in MoveIt</description>

  <maintainer email="jodle@optimaxsi.com">Jacob Odle</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_common</depend>

  <depend>moveit_core</depend>
  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_kdl</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>moveit_msgs</depend>
  <depend>opw_kinematics</depend>

  <!-- some requirements of ikfast scripts -->
  <exec_depend>urdfdom</exec_depend> <!-- provides check_urdf -->
  <exec_depend>python3-lxml</exec_depend>

  <test_depend>moveit_ros_planning</test_depend>
  <test_depend>moveit_resources_fanuc_description</test_depend>
  <test_depend>moveit_resources_fanuc_moveit_config</test_depend>
  <test_depend>moveit_resources_panda_description</test_depend>
  <test_depend>moveit_resources_panda_moveit_config</test_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>moveit_configs_utils</test_depend>
  <test_depend>launch_param_builder</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/moveit_opw_kinematics_plugin.xml"/>
  </export>

</package>
